--- a/index.html
+++ b/index.html
@@ -7,51 +7,52 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
+    <!-- HEADER -->
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="nav">
+          <li><a href="" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <!-- Hero section -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <!-- HERO SECTION -->
+      <section class="hero">
+        <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="button">Замовити послугу</button>
       </section>
-      <!-- Our skills -->
-      <section>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+      <!-- OUR SKILLS -->
+      <section class="skills">
+        <ul class="skills-list">
+          <li class="skills-item">
+            <h3 class="skills-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="skills-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="skills-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="skills-title">ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="skills-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -59,9 +60,9 @@
           </li>
         </ul>
       </section>
-      <!-- What do we do -->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <!-- What do we do "Work"-->
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img src="./image/img.jpg" alt="верстка сайту" width="370" />
@@ -78,45 +79,46 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <!-- Our team -->
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./image/igor.jpg" alt="igor" width="270" />
-            <h3>Ігор Дем'яненко</h3>
+            <h3  class="team-names">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./image/olga.jpg" alt="olga" width="270" />
-            <h3>Ольга Рєпіна</h3>
+            <h3  class="team-names">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./image/mykola.jpg" alt="mykola" width="270" />
-            <h3>Микола Тарасов</h3>
+            <h3  class="team-names">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./image/myhajlo.jpg" alt="myhajlo" width="270" />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-names">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"></a>
+    <footer class="footer contacts">
+      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
       <ul>
         <li>
           <a
             href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.525029,30.590219,21z/data=!4m6!3m5!1s0x40d4d10d59a37c69:0xd67660da67d3a1a2!8m2!3d50.525029!4d30.5903558!16s%2Fg%2F1tj5jp22?entry=ttu"
             target="_blank"
-            rel="noopener norefener"
+            rel="noopener norefener" class="footer-adress"
             >м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </footer>
   </body>
