--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protfolio</title>
     <link rel="stylesheet" href="./styles/styles.css" />
-</head>
-<body>
-     <header>
-      <a href="./index.html">WebStudio</a>
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="nav">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-        <section>
-            <ul><li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li></ul>
-        </section> 
-    </main>
-     <footer>
-        <a href="./index.html"></a>
+        <!-- PORTFOLIO -->
+      <section class="portfolio">
+        <ul>
+          <li><button type="button" class="portfolio-button">Усі</button></li>
+          <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
+          <li><button type="button" class="portfolio-button">Додатки</button></li>
+          <li><button type="button" class="portfolio-button">Дизайн</button></li>
+          <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+        </ul>
         <ul>
           <li>
-            <a
-              href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.525029,30.590219,21z/data=!4m6!3m5!1s0x40d4d10d59a37c69:0xd67660da67d3a1a2!8m2!3d50.525029!4d30.5903558!16s%2Fg%2F1tj5jp22?entry=ttu"
-              target="_blank"
-              rel="noopener norefener"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
+            <img src="./image/portfolio/1techno.jpg" alt="Технокряк" />
+            <h2 class="portfolio-title">Технокряк</h2>
+            <p>Веб-сайт</p>
+            <p></p>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <img
+              src="./image/portfolio/2newOrlean.jpg"
+              alt="Постер New Orlean vs Golden Star"
+            />
+            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+            <p></p>
+          </li>
+          <li>
+            <img src="./image/portfolio/3seafood.jpg" alt="Ресторан Seafood" />
+            <h2 class="portfolio-title">Ресторан Seafood</h2>
+            <p>Додаток</p>
+            <p></p>
+          </li>
+          <li>
+            <img src="./image/portfolio/4prime.jpg" alt="Проєкт Prime" />
+            <h2 class="portfolio-title">Проєкт Prime</h2>
+            <p>Маркетинг</p>
+            <p></p>
+          </li>
+          <li>
+            <img src="./image/portfolio/5boxes.jpg" alt="Проєкт Boxes" />
+            <h2 class="portfolio-title">Проєкт Boxes</h2>
+            <p>Додаток</p>
+            <p></p>
+          </li>
+          <li>
+            <img
+              src="./image/portfolio/6inspiration.jpg"
+              alt="Inspiration has no Borders"
+            />
+            <h2 class="portfolio-title">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+            <p></p>
+          </li>
+          <li>
+            <img
+              src="./image/portfolio/7limitedEdition.jpg"
+              alt="Видання Limited Edition"
+            />
+            <h2 class="portfolio-title">Видання Limited Edition</h2>
+            <p>Дизайн</p>
+            <p></p>
+          </li>
+          <li>
+            <img src="./image/portfolio/8projectLAB.jpg" alt="Проєкт LAB" />
+            <h2 class="portfolio-title">Проєкт LAB</h2>
+            <p>Маркетинг</p>
+            <p></p>
+          </li>
+          <li>
+            <img
+              src="./image/portfolio/Growing Business.jpg"
+              alt="Growing Business"
+            />
+            <h2 class="portfolio-title">Growing Business</h2>
+            <p>Додаток</p>
+            <p></p>
+          </li>
         </ul>
-      </footer>
-</body>
+      </section>
+    </main>
+    <footer class="footer contacts">
+      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+      <ul>
+        <li>
+          <a
+            href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.525029,30.590219,21z/data=!4m6!3m5!1s0x40d4d10d59a37c69:0xd67660da67d3a1a2!8m2!3d50.525029!4d30.5903558!16s%2Fg%2F1tj5jp22?entry=ttu"
+            target="_blank"
+            rel="noopener norefener" class="footer-adress"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+        </li>
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
