--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
       <nav>
         <ul class="nav">
-          <li><a href="" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link ">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
