--- a/portfolio.html
+++ b/portfolio.html
@@ -9,28 +9,42 @@
   <body>
     <!-- HEADER -->
     <header>
-      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+      <a href="./index.html" class="logo"
+        ><span class="logo-span">Web</span>Studio</a
+      >
       <nav>
         <ul class="nav">
           <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-        <!-- PORTFOLIO -->
+      <!-- PORTFOLIO -->
       <section class="portfolio">
         <ul>
           <li><button type="button" class="portfolio-button">Усі</button></li>
-          <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
-          <li><button type="button" class="portfolio-button">Додатки</button></li>
-          <li><button type="button" class="portfolio-button">Дизайн</button></li>
-          <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Веб-сайти</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Додатки</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Маркетинг</button>
+          </li>
         </ul>
         <ul>
           <li>
@@ -102,18 +116,26 @@
         </ul>
       </section>
     </main>
+    <!-- FOOTER -->
     <footer class="footer contacts">
-      <a href="./index.html" class="logo"><span class="logo-span">Web</span>Studio</a>
+      <a href="./index.html" class="logo"
+        ><span class="logo-span">Web</span>Studio</a
+      >
       <ul>
         <li>
           <a
             href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.525029,30.590219,21z/data=!4m6!3m5!1s0x40d4d10d59a37c69:0xd67660da67d3a1a2!8m2!3d50.525029!4d30.5903558!16s%2Fg%2F1tj5jp22?entry=ttu"
             target="_blank"
-            rel="noopener norefener" class="footer-adress"
+            rel="noopener norefener"
+            class="footer-adress"
             >м. Київ, пр-т Лесі Українки, 26</a
           >
         </li>
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </footer>
