Homework #2 is ready

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
@@ -47,70 +51,95 @@
           </li>
         </ul>
         <ul>
+          <!-- <h1>Portfolio</h1> -->
           <li>
-            <img src="./image/portfolio/1techno.jpg" alt="Технокряк" />
+            <img
+              src="./image/portfolio/1techno.jpg"
+              alt="Технокряк"
+              width="370px"
+            />
             <h2 class="portfolio-title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="portfolio-text">Веб-сайт</p>
             <p></p>
           </li>
           <li>
             <img
               src="./image/portfolio/2newOrlean.jpg"
               alt="Постер New Orlean vs Golden Star"
+              width="370px"
             />
             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <p class="portfolio-text">Дизайн</p>
             <p></p>
           </li>
           <li>
-            <img src="./image/portfolio/3seafood.jpg" alt="Ресторан Seafood" />
+            <img
+              src="./image/portfolio/3seafood.jpg"
+              alt="Ресторан Seafood"
+              width="370px"
+            />
             <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p>
             <p></p>
           </li>
           <li>
-            <img src="./image/portfolio/4prime.jpg" alt="Проєкт Prime" />
+            <img
+              src="./image/portfolio/4prime.jpg"
+              alt="Проєкт Prime"
+              width="370px"
+            />
             <h2 class="portfolio-title">Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <p class="portfolio-text">Маркетинг</p>
             <p></p>
           </li>
           <li>
-            <img src="./image/portfolio/5boxes.jpg" alt="Проєкт Boxes" />
+            <img
+              src="./image/portfolio/5boxes.jpg"
+              alt="Проєкт Boxes"
+              width="370px"
+            />
             <h2 class="portfolio-title">Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p>
             <p></p>
           </li>
           <li>
             <img
               src="./image/portfolio/6inspiration.jpg"
               alt="Inspiration has no Borders"
+              width="370px"
             />
             <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="portfolio-text">Веб-сайт</p>
             <p></p>
           </li>
           <li>
             <img
               src="./image/portfolio/7limitedEdition.jpg"
               alt="Видання Limited Edition"
+              width="370px"
             />
             <h2 class="portfolio-title">Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <p class="portfolio-text">Дизайн</p>
             <p></p>
           </li>
           <li>
-            <img src="./image/portfolio/8projectLAB.jpg" alt="Проєкт LAB" />
+            <img
+              src="./image/portfolio/8projectLAB.jpg"
+              alt="Проєкт LAB"
+              width="370px"
+            />
             <h2 class="portfolio-title">Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <p class="portfolio-text">Маркетинг</p>
             <p></p>
           </li>
           <li>
             <img
               src="./image/portfolio/Growing Business.jpg"
               alt="Growing Business"
+              width="370px"
             />
             <h2 class="portfolio-title">Growing Business</h2>
-            <p>Додаток</p>
+            <p class="portfolio-text">Додаток</p>
             <p></p>
           </li>
         </ul>
